# livedav

./: CMakeLists.txt  README.md  cava.c  cavacore.c  compile_commands.json  config.c  config.h  smake.yaml
input/: alsa.c  pulse.c  pulse.h
livedav/: cava.cpp  cavacore.cpp  cavacore.hpp  common.cpp  common.hpp  config.cpp  pulse.cpp
output/: raw.c  terminal_noncurses.c
rawcava/: cava.c  cavacore.c  common.c  common.h  config.c  config.h  pulse.c
